env/templates/jenkins-service-override.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/exposeUrl: https://jenkins-jx.hibob.com
    fabric8.io/ingress.annotations: |-
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: 500m
    jenkins.io/chart: env
  labels:
    app: jenkins
  name: jenkins
  namespace: jx
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: jenkins-x-jenkins-master
  sessionAffinity: None
  type: ClusterIP
