env/templates/jenkins-additional-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: jenkins-additional
  namespace: jx
spec:
  rules:
  - host: jenkins-jx.hibob.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
