env/templates/jenkins-ingress-override.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: jenkins
  namespace: jx
spec:
  rules:
  - host: jenkins-jx.hibob.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
